--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
         <div class="row waterfall" data-col-min-width="300">
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 proBox">
             <div class="proBoxCon">
-              <a href="http://cody1991.github.io/">Visual Analysis of the Covid-19 Cases within LA County</a>
+              <a href="https://dongziyuan.github.io/covid19.html">Visual Analysis of the Covid-19 Cases within LA County</a>
               <ul>
                 <li>
                   Proposed a hybrid model-and-data-driven Bayesian approach to measure the infection risk based on SIR epidemic model, 
@@ -374,7 +374,7 @@
           </div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 proBox">
             <div class="proBoxCon">
-              <a href="http://cody1991.github.io/">Classification and Statistical Analysis of the Mobile App Reviews</a>
+              <a href="https://github.com/DongZiyuan/Classifying-Mobile-App-Reviews">Classification and Statistical Analysis of the Mobile App Reviews</a>
               <ul>
                 <li>Annotated reviews of mobile applications manually based on software quality issues that these reviews involved</li>
                 <li>Cleaned the raw corpus with NLTK, and vectorized the text with the methods of Word2vec</li>
@@ -416,7 +416,7 @@
           </div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 proBox">
             <div class="proBoxCon">
-              <a href="https://github.com/DongZiyuan/Weather-App">Development of the Weather Forecast Android App</a>
+              <a href="https://github.com/DongZiyuan/Android-Weather-App">Development of the Weather Forecast Android App</a>
               <ul>
                 <li>Deployed a server on AWS and designed query API to fetch weather information </li>
                 <li>Implemented functions of local storage, splash screen and dynamic layout with high performance</li>
