--- a/index.html
+++ b/index.html
@@ -84,25 +84,24 @@
         </div>
         <div id="description">
           <p>
-            I graduated from Nankai University as a Bachelor of Computer Science and earned Master's degree at USC in 2020. 
-            As a student, I built a solid foundation in Computer Science, especially in Data Structue and Algorithm Design. 
-            I have solved over 500 problems at Leetcode and won three weekly contests. The graduate level courses I took 
-            involve various advanced skills being used in industry. Moreover, I paticipated in multiple research projects 
-            where I learned how to work in a team.
+            I graduated from Nankai University as a Bachelor of Computer Science and earned a Master's degree at USC in 2020. 
+            As a student, I built a solid foundation in Computer Science, especially in Data Structures and Algorithm Design. 
+            I have solved over 500 problems at Leetcode and won three weekly contests. The graduate-level courses I took involve 
+            various advanced skills being used in the industry. Moreover, I participated in multiple research projects where 
+            I learned how to work in a team.
           </p>
           <p>
-            I believe that a great software engineer should launch his career with internship. So I worked as a SDE intern 
-            at two places for totally over 6 months. In summer 2019, I developed the official website for a small startup.
-            Working in a small team makes me get experience with both backend and frontend, such as Angular, Node.js, Redis. 
-            In summer 2020, I joined Alibaba Group as a SDE intern. I worked in a large team with other excellent engineers.
-            Under the guidance of mentor, I got the knowledge of agile development, CI/CD pipeline and contributing code to 
-            large-scale software.
+            I believe that a great software engineer should launch his career with an internship. So I worked as an SDE intern 
+            at two places for over 6 months. In summer 2019, I developed the official website for a small startup. Working in a 
+            small team makes me get experience with both backend and frontend, such as Angular, Node.js, Redis. In summer 2020, 
+            I joined Alibaba Group as an SDE intern. I worked in a large team with other excellent engineers. Under the guidance 
+            of the mentor,  I learned agile development, CI/CD pipeline, and how to write high-quality code.
           </p>
           <p>
-            In addition to me daily work, I stay passionate about learning new technical skills. I often read technical blogs 
-            about new features of various development tools. I am also glad to share experience in open-source communities, 
-            communicate with senior engineers. Coding doesn't occupy my life completely. Work-life balance is important to me. 
-            I enjoy traveling, doing sports, cooking and watching movies, which could make me relax and devoted to working.
+            Besides my regular work, I keep passionate about learning new technical skills. I often read technical blogs about 
+            new features of various development tools. I am also glad to share experience in open-source communities, communicate 
+            with senior engineers. Coding doesn’t occupy my life completely. Work-life balance is important to me. I enjoy 
+            traveling, doing sports, cooking, and watching movies, which could make me relax and be devoted to future work.
           </p>
         </div>
         <a class="btnDownload">Tech Blog</a>
@@ -114,11 +113,10 @@
         <div class="heading">
           <h2 id="technical_title">TECHNICAL SKILLS</h2>
           <p>
-            I have experience in both Backend and Frontend. Below is a set of programming languages, frameworks and platforms
-            that I have used, and the percentage indicates how proficient I am with these skills. Over 85% means that I know 
-            the advanced features of this skill and often use it in professiinal development; 70% to 85% implies that I have 
-            used it to complete research projects or courseworks; lower than 70% represents that I have the basic knowledge 
-            of this skill.
+            I have experience in both Backend and Frontend. Below is a set of programming languages, frameworks, and platforms 
+            that I have used, and the percentage indicates how proficient I am with these skills. Over 85% means that I know the 
+            advanced features of this skill and often use it in professional development; 70% to 85% implies that I have used it 
+            to complete research projects or coursework; 70% or less represents that I have the basic knowledge of this skill.
           </p>
         </div>
         <div class="row">
@@ -255,7 +253,10 @@
         <div class="heading">
           <h2>EXPERIENCE</h2>
           <p>
-            I have work experience by doing internship at two places. In summer 2019, I worked for a health care startup as a Web Development Engineer. I built the official website with Angular, Node.js and Redis, and ported the website to Android platform. In summer 2020, I joined Alibaba Group as a Java SDE. I am responsible for developing high performance Ali MiniApp and adding new features to multiple IDE extensions for Rax.
+            I have work experience by doing an internship at two places. In summer 2019, I worked for a health care 
+            startup as a Web Development Engineer. I built the official website with Angular, Node.js and Redis, 
+            then ported the website to the Android platform. In summer 2020, I joined Alibaba Group as a Java SDE. 
+            I am responsible for developing high-performance Ali MiniApp and adding new features to multiple IDE extensions for Rax.
           </p>
         </div>
         <div class="row workDetails">
@@ -272,8 +273,8 @@
               <h5>Software Development Engineer Intern</h5>
               <ul>
                 <li>
-                  Developed an Ali Mini App with the features of server side rendering and compiling at runtime by using
-                  Rax(an Ali progressive React-compatible JS framework)
+                  Developed an Ali Mini App with the features of server-side rendering and compiling at runtime 
+                  by using Rax(an Ali progressive React-compatible JS framework)
                 </li>
                 <li>
                   Participate in the development of advanced components for Rax, such as Gesture View, Animation based
@@ -301,7 +302,7 @@
               <h5>Web Development Engineer Intern</h5>
               <ul>
                 <li>Built an official website with MVC pattern by using Angular7 and Node.js and Redis</li>
-                <li>Designed RESTful api on Node.js and used libuv to handle heavy I/O requests</li>
+                <li>Designed RESTful API on Node.js and used libuv to handle heavy I/O requests</li>
                 <li>Developed an Android App with features of dynamic layouts, autocomplete suggestions and LRUCache</li>
                 <li>Used GitLabs and Docker to implement CI/CD Pipeline</li>
               </ul>
@@ -321,8 +322,8 @@
               <h4>University of Southern California</h4>
               <h5>M.S. in Computer Science</h5>
               <p>
-                I graduated from USC as a CS Master at May 2020. The courses I took include Data Mining, Network Modelling, 
-                Web Technologies, Machine Learning and Affective Computing. I participated in two research projects: 
+                I graduated from USC as a CS Master in May 2020. The courses I took include Data Mining, Network Modelling, 
+                Web Technologies, Machine Learning, and Affective Computing. I participated in two research projects: 
                 Visual Analysis of the Covid-19 Epidemic within LA County and Classification of the Mobile App Reviews based on Software Quality.
               </p>
             </div>
@@ -341,10 +342,10 @@
               <h4>Nankai University</h4>
               <h5>B.S. in Computer Science</h5>
               <p>
-                I earned my Bachelor's degree of Computer Science at Nankai University in 2018. I got good academic records in 
-                Analysis of Algrithms, Database Design, Operating System and Computer Networking, and won scholarships in 2016 and 2017.
-                Besides, I led a team to develop the Portable Muscle Fatigue Monitor System, which won the Second Prize of the 
-                Third National Competition on Internet of Things.
+                I earned my Bachelor's degree in Computer Science from Nankai University in 2018. I got good academic 
+                records in Analysis of Algorithms, Database Design, Operating System and Computer Networking, and won 
+                scholarships in 2016 and 2017. Besides, I led a team to develop the Portable Muscle Fatigue Monitor System, 
+                which won the Second Prize of the Third National Competition on the Internet of Things.
               </p>
             </div>
           </div>
@@ -355,7 +356,7 @@
       <div class="container">
         <div class="heading">
           <h2>PROJECTS</h2>
-          <p>Below is a set of projects that I have joined. Click the title for more details and source code</p>
+          <p>Below is a set of projects that I have joined. Click the title for more details and source code.</p>
         </div>
         <div class="row waterfall" data-col-min-width="300">
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 proBox">
@@ -377,15 +378,13 @@
               <a href="https://github.com/DongZiyuan/Classifying-Mobile-App-Reviews">
               	Classification and Statistical Analysis of the Mobile App Reviews
               </a>
-              <a href="https://github.com/DongZiyuan/Classifying-Mobile-App-Reviews">
-              	Classification and Statistical Analysis of the Mobile App Reviews
-              </a>
               <ul>
                 <li>Annotated reviews of mobile applications manually based on software quality issues that these reviews involved</li>
                 <li>Cleaned the raw corpus with NLTK, and vectorized the text with the methods of Word2vec</li>
                 <li>
-                  Constructed a SVM model with SKlearn to classify user reviews into corresponding category of software quality, 
-                  and optimized the hyper-parameters to keep the F1 score > 0.9
+                  Constructed an SVM model with SKlearn to classify user reviews into the corresponding category of software 
+                  quality, and optimized the hyper-parameters to keep the F1 score > 0.9Classification and Statistical Analysis 
+                  of the Mobile App Reviews
                 </li>
               </ul>
               <p>Jun 2019 – Aug 2019</p>
