--- a/index.html
+++ b/index.html
@@ -383,8 +383,7 @@
                 <li>Cleaned the raw corpus with NLTK, and vectorized the text with the methods of Word2vec</li>
                 <li>
                   Constructed an SVM model with SKlearn to classify user reviews into the corresponding category of software 
-                  quality, and optimized the hyper-parameters to keep the F1 score > 0.9Classification and Statistical Analysis 
-                  of the Mobile App Reviews
+                  quality, and optimized the hyper-parameters to keep the F1 score > 0.9
                 </li>
               </ul>
               <p>Jun 2019 – Aug 2019</p>
@@ -433,17 +432,13 @@
       </div>
     </section>
     <section class="contact" id="contact">
-      <div class="container topCon">
+      <div class="container">
         <div class="heading">
           <h2>CONTACT ME</h2>
         </div>
-      </div>
-    </section>
-    <section class="contactDetails">
-      <div class="container">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-          <p><img src=".\static\images\phone.svg">(720)-725-9163</p>
-          <p><img src=".\static\images\email.svg">tracymyth1994@gmail.com</p>
+        <div class="conDetails">
+          <p><img src=".\static\images\phone.svg"> (720)-725-9163</p>
+          <p><img src=".\static\images\email.svg"> tracymyth1994@gmail.com</p>
           <p>
             <img src=".\static\images\linkedin.svg">
             <a href="https://www.linkedin.com/in/ziyuandong1994/">https://www.linkedin.com/in/ziyuandong1994/</a></p>
