--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           </p>
         </div>
         <a class="btnDownload">Tech Blog</a>
-        <a href="https://drive.google.com/file/d/16UKuoDN8h2QHuDEomXeKjQPBq51z1o-z/view?usp=sharing" class="btnDownload">My Resume</a>
+        <a href="https://dongziyuan.github.io/static/resume.pdf" class="btnDownload">My Resume</a>
       </div>
     </section>
     <section class="technical" id="technical">
