--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <p>
             I believe that a great software engineer should launch his career with an internship. So I worked as an SDE intern 
             at two places for over 6 months. In summer 2019, I developed the official website for a small startup. Working in a 
-            small team makes me get experience with both backend and frontend, such as Angular, Node.js, Redis. In summer 2020, 
+            small team makes me get experience with both backend and frontend, such as Angular, Node.js, MongoDB. In summer 2020, 
             I joined Alibaba Group as an SDE intern. I worked in a large team with other excellent engineers. Under the guidance 
             of the mentor,  I learned agile development, CI/CD pipeline, and how to write high-quality code.
           </p>
@@ -254,7 +254,7 @@
           <h2>EXPERIENCE</h2>
           <p>
             I have work experience by doing an internship at two places. In summer 2019, I worked for a health care 
-            startup as a Web Development Engineer. I built the official website with Angular, Node.js and Redis, 
+            startup as a Web Development Engineer. I built the official website with Angular, Node.js and MongoDB, 
             then ported the website to the Android platform. In summer 2020, I joined Alibaba Group as a Java SDE. 
             I am responsible for developing high-performance Ali MiniApp and adding new features to multiple IDE extensions for Rax.
           </p>
@@ -301,7 +301,7 @@
               <h4>Care Labs</h4>
               <h5>Web Development Engineer Intern</h5>
               <ul>
-                <li>Built an official website with MVC pattern by using Angular7 and Node.js and Redis</li>
+                <li>Built an official website with MVC pattern by using Angular7 and Node.js and MongoDB</li>
                 <li>Designed RESTful API on Node.js and used libuv to handle heavy I/O requests</li>
                 <li>Developed an Android App with features of dynamic layouts, autocomplete suggestions and LRUCache</li>
                 <li>Used GitLabs and Docker to implement CI/CD Pipeline</li>
