--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
         <div class="row waterfall" data-col-min-width="300">
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 proBox">
             <div class="proBoxCon">
-              <a href="https://dongziyuan.github.io/covid19.html">Visual Analysis of the Covid-19 Cases within LA County</a>
+              <a href="https://lacounty-covid-19.herokuapp.com/">Visual Analysis of the Covid-19 Cases within LA County</a>
               <ul>
                 <li>
                   Proposed a hybrid model-and-data-driven Bayesian approach to measure the infection risk based on SIR epidemic model, 
