--- a/index.html
+++ b/index.html
@@ -95,44 +95,44 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <i class="ri-database-2-line" style="color: #5578ff;"></i>
+            <i class="ri-line-chart-line" style="color: #5578ff;"></i>
             <h3>Machine Leaning</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <i class="ri-camera-3-line" style="color: #e80368;"></i>
+            <i class="ri-smartphone-line" style="color: #e80368;"></i>
             <h3>Mobile Development</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
           <div class="icon-box">
-            <i class="ri-english-input" style="color: #1c7d32;"></i>
+            <i class="ri-code-s-slash-fill" style="color: #1c7d32;"></i>
             <h3>Algorithms</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-code-s-slash-fill" style="color: #28a745;"></i>
+            <i class="zondicon-travel-train" style="color: #28a745;"></i>
             <h3>Traveling</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-bar-chart-box-line" style="color: #f1081f;"></i>
+            <i class="ri-book-2-line" style="color: #f1081f;"></i>
             <h3>Reading</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-file-list-3-line" style="color: #47aeff;"></i>
-            <h3>Doing sports</h3>
+            <i class="ri-basketball-fill" style="color: #47aeff;"></i>
+            <h3>Sports</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-image-line" style="color: #ffc107;"></i>
-            <h3>Watching Movies</h3>
+            <i class="ri-movie-2-line" style="color: #ffc107;"></i>
+            <h3>Movies</h3>
           </div>
         </div>
       </div>
