--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <i class="ri-line-chart-line" style="color: #5578ff;"></i>
+            <i class="ri-computer-line" style="color: #5578ff;"></i>
             <h3>Machine Leaning</h3>
           </div>
         </div>
@@ -113,7 +113,7 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="zondicon-travel-train" style="color: #28a745;"></i>
+            <i class="ri-train-line" style="color: #28a745;"></i>
             <h3>Traveling</h3>
           </div>
         </div>
